Bug 346948 - Option list in 'Advanced' tab doesn't allow highlighting
Summary: Option list in 'Advanced' tab doesn't allow highlighting
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_keyboard (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Andriy Rysin
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-04-30 11:15 UTC by Elias Probst
Modified: 2015-09-26 20:15 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.4.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Elias Probst 2015-04-30 11:15:59 UTC
When trying to navigate the option list in the "Advanced" tab of the keyboard KCM, the items aren't highlighted and therefor making proper keyboard navigation impossible.

It's also not possible to highlight the items by clicking on them/their text.

Reproducible: Always

Steps to Reproduce:
1. Run 'kcmshell5 kcm_keyboard'
2. Alt+v (go to 'Advanced' tab)
3. Alt+C (Enable 'Configure keyboard options')
4. ArrowDown (navigate option list)

When using ArrowRight/Left the current element is expanded/unfolded, which confirms the focus is actually inside the option list.

Actual Results:  
The current item in the option list is not highlighted
Comment 1 Elias Probst 2015-04-30 11:16:22 UTC
Running current git master (shortly after Plasma 5.3.0 release)
Comment 2 David Rosca 2015-09-26 20:15:25 UTC
Git commit e03136cd11083e78347c90b4f42dcaf17c390a24 by David Rosca.
Committed on 26/09/2015 at 20:03.
Pushed by drosca into branch 'Plasma/5.4'.

kcm_keyboard: Enable selection in Advanced options view

Enable selection in Advanced options view to allow keyboard navigation.

Also fixed one wrong cast - possible crash.
FIXED-IN: 5.4.2
REVIEW: 125411

M  +2    -5    kcms/keyboard/kcm_keyboard.ui
M  +1    -1    kcms/keyboard/kcm_keyboard_widget.cpp
M  +2    -2    kcms/keyboard/kcm_view_models.h

http://commits.kde.org/plasma-desktop/e03136cd11083e78347c90b4f42dcaf17c390a24