kcm_keyboard: Enable selection in Advanced options view

Enable selection in Advanced options view to allow keyboard navigation.

Also fixed one wrong cast - possible crash.

BUG: 346948
FIXED-IN: 5.4.2
REVIEW: 125411